--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ h1 {
 
 .seccion-oscura {
   color: white;
-  background-color: #1b1b32;
+  background-color: #2a6b6c;
 }
 
 .seccion-clara {
@@ -120,8 +120,8 @@ h1 {
 
 .experiencia i {
   font-size: 2.5rem;
-  color: #7ade30;
-  background-color: #0a0a23;
+  color: #63b2ae;
+  background-color: #0b3838;
   padding: 8px 19px;
   border-radius: 50%;
 }
@@ -268,7 +268,7 @@ h1 {
 
 .testimonio-info .cargo {
   font-size: 0.9rem;
-  color: #656060;
+  color: #17215d;
 }
 
 /* Contacto */
@@ -281,7 +281,7 @@ h1 {
 
 .contacto .rectangulo {
   margin-top: -5rem;
-  background-color: rgb(13, 110, 253);
+  background-color: rgb(41, 79, 87);
   border-radius: 10px;
   box-shadow: 0px 1px 4px 1px white;
 }
@@ -374,6 +374,18 @@ footer {
   font-size: 15px;
   color: #aeaeae;
   padding: 20px;
+}
+
+.btn-info{
+  background-color: #52999a;
+}
+
+.text-bg-primary {
+  background-color: #52999a !important;
+}
+
+.Typewriter__wrapper{
+  color:#2a6b6c;
 }
 
 /* Adaptable (Responsivo) */
